# libreclient

./: .gitignore  CHANGELOG.md  COMMIT_TYPES.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  check_upstream.py  generate_stubs.py  pyproject.toml  sample.env  upstream_tracking.toml  zensical.toml
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  new_route.md  question.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: COMMIT_TYPES.md  CONTRIBUTING.md  development.md  documentation.md  index.md  support.md
docs/examples/: add_device.md
scripts/: check_upstream.py  generate_stubs.py  zensical_macros.py
src/libreclient/: __init__.py  __init__.pyi  _base_client.py  config.py
src/libreclient/models/: __init__.py  _base.py  alerts.py  arp.py  device_groups.py  devices.py  index.py  inventory.py  locations.py  poller_groups.py  pollers.py  port_groups.py  port_security.py  ports.py  services.py  switching.py
src/libreclient/routes/: __init__.py  _types.py  alerts.py  alerts_sync.py  arp.py  arp_sync.py  bills.py  bills_sync.py  device_groups.py  device_groups_sync.py  devices.py  devices_sync.py  index.py  index_sync.py  inventory.py  inventory_sync.py  locations.py  locations_sync.py  logs.py  logs_sync.py  poller_groups.py  poller_groups_sync.py  pollers.py  pollers_sync.py  port_groups.py  port_groups_sync.py  port_security.py  port_security_sync.py  portgroups.py  portgroups_sync.py  ports.py  ports_sync.py  routing.py  routing_sync.py  services.py  services_sync.py  switching.py  switching_sync.py  system.py  system_sync.py
src/py_librenms/: _base_client.py  client.py  config.py
src/py_librenms/models/: __init__.py  alerts.py  bills.py  devices.py  inventory.py  locations.py  logs.py  poller_groups.py  port_security.py  portgroups.py  ports.py  routing.py  switching.py  system.py
src/py_librenms/routes/: __init__.py  _synchronicity.py  _types.py  alerts.py  arp.py  bills.py  device_groups.py  devices.py  index.py  inventory.py  locations.py  logs.py  poller_groups.py  pollers.py  port_groups.py  port_security.py  portgroups.py  ports.py  routing.py  services.py  switching.py  system.py
tests/: conftest.py
tests/functional/: conftest.py  test_client.py  test_placeholder.py
tests/functional/routes/: test_alerts.py  test_arp.py  test_bills.py  (+15 more)
tests/unit/: test_client.py  test_config.py
(+35 files in other folders)
